# ccom

./: .gitignore  API.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MCP.md  MCP_ANALYSIS.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_TEST_REPORT.md  MIGRATION_GUIDE_v5.md  RAG_WORKFLOWS.md  README.md  REFACTORING_PLAN.md  REFACTORING_RESULTS.md  SEAMLESS_CONTEXT_IMPLEMENTATION.md  STATUS.md  UNIVERSAL_CAPTURE_IMPLEMENTATION.md  USER.md  ccom_server.py  context.db  debug_js_execution.py  investigate_real_browser.py  package.json  push-fixed.bat  push.bat  push.ps1  push.sh  pyproject.toml  setup.py  specs4.4.md  specs5.0.md  test_mcp_comprehensive.py
.ccom/: mcp_bridge_ccom-ccom.json
.claude/: ccom.js  command_history.json  context_intelligence.json  memory.json  pattern_learning.json  session_continuity.json  settings.local.json  tools.json  validation_history.json
.claude/agents/: builder-agent.md  deployment-specialist.md  quality-enforcer.md  security-guardian.md
.claude/configs/: eslint-enterprise-rag.js
.claude/validators/: angular-validator.js  (+11 more)
cco/: __init__.py  cli.py
ccom/: __init__.py  auto_capture.py  auto_context.py  cli.py  cli_legacy.py  file_monitor.py  mcp_bridge.py  mcp_cli.py  mcp_integration.py  mcp_keeper_bridge.py  mcp_native.py  orchestrator.py  orchestrator.py.bak  orchestrator_legacy.py  sdk_integration.py  tools_manager.py  universal_capture.py  validators.py  workflows.py
ccom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: context.db
tests/: README.md  ccom_capture_hook.py  test_memory_integration.py
(+49 files in other folders)
