[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccom"
version = "0.3.0"
description = "CCOM v0.3 - Claude Code Orchestrator and Memory with enterprise automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/debashishroy00/ccom"
Repository = "https://github.com/debashishroy00/ccom"
Issues = "https://github.com/debashishroy00/ccom/issues"

[project.scripts]
ccom = "ccom.cli:main"